--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,7 +8,7 @@
 
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
         <ion-label class="titulo" style="color: white;" fixed>Correo</ion-label>
-        <ion-input disabled class="titulo" type="email" style="color: white;" [(ngModel)]="loginFields.nombre" name="email"></ion-input>
+        <ion-input disabled class="titulo" type="email" style="color: white;" [(ngModel)]="loginFields.email" name="email"></ion-input>
       </ion-item>
 
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
