--- a/src/pages/pages-dueno/pages-dueno.html
+++ b/src/pages/pages-dueno/pages-dueno.html
@@ -34,7 +34,7 @@
 
 
         <div padding>
-          <button class="loginButton" large ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
+          <button class="loginButton" large ion-button color="primary" block>REGISTRAR</button>
         </div>
   
       </ion-list>
