--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -19,9 +19,13 @@
       <div padding>
         <button class="loginButton" large ion-button color="primary" block>{{ 'LOGIN_BUTTON' | translate }}</button>
       </div>
-
+      
     </ion-list>
   </form>
+
+  <div padding>
+      <button class="loginButton" large ion-button color="primary" block (click)="irARegistro()" >Registrarme</button>
+    </div>
 
 </ion-content>
 <ion-footer>
