Arreglos generales, interface de form producto creada

--- a/src/pages/pages-bartender/pages-bartender-menu/pages-bartender-menu.html
+++ b/src/pages/pages-bartender/pages-bartender-menu/pages-bartender-menu.html
@@ -1,12 +1,9 @@
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Bartender Menu page</ion-title>
+  <ion-navbar class="bartenderNavBar">
+    <ion-title>Bartender</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
-<ion-content padding>
-
+<ion-content padding class="bartenderMenu">
+  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Productos</button>
 </ion-content>
