--- a/src/pages/pages-cocinero/pages-cocinero-menu/pages-cocinero-menu.html
+++ b/src/pages/pages-cocinero/pages-cocinero-menu/pages-cocinero-menu.html
@@ -1,12 +1,8 @@
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Cocinero menu page</ion-title>
+  <ion-navbar class="cocineroNavBar">
+    <ion-title>Cocinero</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content padding class="cocineroMenu">
+    <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Productos</button>
 </ion-content>
