--- a/src/pages/pages-producto/pages-producto-alta/pages-producto-alta.html
+++ b/src/pages/pages-producto/pages-producto-alta/pages-producto-alta.html
@@ -1,12 +1,39 @@
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>alta</ion-title>
+  <ion-navbar class="productoNavBar">
+    <ion-title>Producto - Alta</ion-title>
   </ion-navbar>
-
 </ion-header>
-
-
-<ion-content padding>
-
+<ion-content padding class="productoMenu">
+    <form (ngSubmit)="cargar()">
+        <ion-item padding class="formItem">
+          <ion-input type="text" [(ngModel)]="producto.nombre" name="nombre" placeholder="Nombre"></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+          <ion-input type="text" [(ngModel)]="producto.descripcion" name="descripcion" placeholder="Descripción"></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+          <ion-input type="number" [(ngModel)]="producto.tiempo" name="tiempo" placeholder="Tiempo de elaboración"></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+          <ion-input type="number" [(ngModel)]="producto.precio" name="precio" placeholder="Precio"></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+            <button ion-button default name="foto1">Foto 1</button>
+            <button ion-button default name="foto2">Foto 2</button>
+            <button ion-button default name="foto3">Foto 3</button>
+        </ion-item>
+        <ion-item padding class="formItem">
+          <ion-input type="text" [(ngModel)]="producto.foto1" name="foto1" placeholder="Foto 1" disabled></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+          <ion-input type="text" [(ngModel)]="producto.foto2" name="foto2" placeholder="Foto 2" disabled></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+          <ion-input type="text" [(ngModel)]="producto.foto3" name="foto3" placeholder="Foto 3" disabled></ion-input>
+        </ion-item>
+        <ion-item padding class="formItem">
+            <button ion-button name="foto3" block large>Cargar con QR</button>
+        </ion-item>
+        <button ion-button type="submit" block large>Añadir producto</button>
+      </form>
 </ion-content>
