--- a/src/pages/pages-producto/pages-producto-alta/pages-producto-alta.html
+++ b/src/pages/pages-producto/pages-producto-alta/pages-producto-alta.html
@@ -32,7 +32,7 @@
           <ion-input type="text" [(ngModel)]="producto.foto3" name="foto3" placeholder="Foto 3" disabled></ion-input>
         </ion-item>
         <ion-item padding class="formItem">
-            <button ion-button name="foto3" block large>Cargar con QR</button>
+            <button ion-button block large>Cargar con QR</button>
         </ion-item>
         <button ion-button type="submit" block large>Añadir producto</button>
       </form>
