codebar en registro cliente

--- a/src/pages/pages-registro-usuario/pages-registro-usuario.html
+++ b/src/pages/pages-registro-usuario/pages-registro-usuario.html
@@ -38,6 +38,11 @@
     </ion-list>
   </form>
 
+  
+  <div padding>
+    <button class="loginButton" large ion-button color="primary" (click)="LeerDni()">Escaner dni</button>
+  </div>
+
 </ion-content>
 
 <ion-footer>
