--- a/src/pages/pages-dueno/pages-dueno.html
+++ b/src/pages/pages-dueno/pages-dueno.html
@@ -1,16 +1,11 @@
-<div class="contenidoLogin">
+<ion-header>
+  <ion-navbar class="bartenderNavBar">
+    <ion-title>Dueño</ion-title>
+  </ion-navbar>
+</ion-header>
 
-  <div padding>
-    <button ion-button large color="primary" class="loginButton" (click)="AltaMesa()">Alta Mesa</button>
-  </div>
-
-  <div padding>
-    <button ion-button large color="primary" class="loginButton" (click)="AltaDueno()">Alta Dueño</button>
-  </div>
-
-  <div padding>
-    <button ion-button large color="primary" class="loginButton" (click)="AltaEmpleado()">Alta Empleado</button>
-  </div>
- 
-</div>
-  
+<ion-content padding class="bartenderMenu">
+  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaMesa()">Alta Mesa</button>
+  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaDueno()">Alta Dueño</button>
+  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaEmpleado()">Alta Empleado</button>
+</ion-content>
