--- a/src/pages/pages-reserva/pages-reserva.html
+++ b/src/pages/pages-reserva/pages-reserva.html
@@ -4,24 +4,39 @@
     <div class="contenidoLogin">
 <ion-content padding>
 
+        <form [formGroup]="registroForm" (submit)="Registrar()">
+
     <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
         <ion-label>Fecha</ion-label>
-        <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="fecha"></ion-datetime>
+        <ion-datetime displayFormat="MMM DD YYYY" name="fecha" [formControl]="fecha" required ></ion-datetime>
       </ion-item>
 
     <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
         <ion-label>Hora</ion-label>
-        <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" [(ngModel)]="hora"></ion-datetime>
+        <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" name="hora" [formControl]="hora" required ></ion-datetime>
       </ion-item>
 
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
           <ion-label>Cantidad de comensales</ion-label>
-          <ion-input type="number" [(ngModel)]="cant_comensales"></ion-input>
+          <ion-input type="number" name="cant_comensales" [formControl]="cant_comensales" required ></ion-input>
         </ion-item>
 
+        <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
+                <ion-label>VIP</ion-label>
+                <ion-checkbox name="vip" [formControl]="vip" ></ion-checkbox>
+              </ion-item>
+
+
+            
+
+
+
+          
       <div padding>
-          <button type="submit" class="loginButton" large ion-button color="primary">Reservar</button>
+          <button type="submit" class="loginButton" large ion-button color="primary" [disabled]="!registroForm.valid" block>Reservar</button>
         </div>
+
+        </form>
 
 
 
