--- a/src/pages/pages-bartender/pages-bartender-menu/pages-bartender-menu.html
+++ b/src/pages/pages-bartender/pages-bartender-menu/pages-bartender-menu.html
@@ -5,5 +5,5 @@
 </ion-header>
 
 <ion-content padding class="bartenderMenu">
-  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Productos</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Productos</button>
 </ion-content>
