--- a/src/pages/pages-cocinero/pages-cocinero-menu/pages-cocinero-menu.html
+++ b/src/pages/pages-cocinero/pages-cocinero-menu/pages-cocinero-menu.html
@@ -4,5 +4,5 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding class="cocineroMenu">
-    <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Productos</button>
+    <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Productos</button>
 </ion-content>
