--- a/src/pages/pages-dueno/pages-dueno.html
+++ b/src/pages/pages-dueno/pages-dueno.html
@@ -8,4 +8,5 @@
   <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaMesa()">Alta Mesa</button>
   <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaDueno()">Alta Dueño</button>
   <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaEmpleado()">Alta Empleado</button>
+  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa</button>
 </ion-content>
