--- a/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
+++ b/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
@@ -3,8 +3,8 @@
     <ion-title>Dueño</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content padding class="bartenderMenu">
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Altas</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="encuestaUsuarios()">Encuesta de usuarios</button>
   <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa</button>
 </ion-content>
