--- a/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
+++ b/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
@@ -6,5 +6,8 @@
 <ion-content padding class="bartenderMenu">
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Altas</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="encuestaUsuarios()">Encuesta de usuarios</button>
-  <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa con QR</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="OcuparMesa()">Ocupar Mesa con QR</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="RelacionMesaUsuario()">Obtener Usuario de Mesa</button>
+
 </ion-content>
