Encuesta de supervisor funcionando

--- a/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
+++ b/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
@@ -4,7 +4,6 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding class="bartenderMenu">
-  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="presentActionSheet()">Altas</button>
-  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="encuestaUsuarios()">Encuesta de usuarios</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="altas()">Altas</button>
   <button ion-button expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa</button>
 </ion-content>
