--- a/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
+++ b/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
@@ -9,4 +9,5 @@
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa con QR</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="OcuparMesa()">Ocupar Mesa con QR</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="RelacionMesaUsuario()">Obtener Usuario de Mesa</button>
+  <solicitud-mesa></solicitud-mesa>
 </ion-content>
