--- a/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
+++ b/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
@@ -9,4 +9,5 @@
     <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated">Hacer pedido</button>
     <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated">Pagar</button>
     <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="juegos()">Juegos</button>
+    <solicitud-mesa></solicitud-mesa>
 </ion-content>
