validacion de correo terminada

--- a/src/pages/pages-registro-usuario/pages-registro-usuario.html
+++ b/src/pages/pages-registro-usuario/pages-registro-usuario.html
@@ -1,4 +1,15 @@
 
+
+<ion-header>
+
+  <ion-navbar class="bartenderNavBar">
+      <ion-title>Registro Usuario</ion-title>
+    </ion-navbar>
+
+</ion-header>
+
+
+
 <div class="contenidoLogin">
 <ion-content padding>
   <h1 style="color: white">Registro</h1>
