--- a/src/pages/pages-registros-pendientes/pages-registros-pendientes.html
+++ b/src/pages/pages-registros-pendientes/pages-registros-pendientes.html
@@ -30,8 +30,8 @@
           {{usuario.estado}}
           <br>
     
-          <button ion-button (click) ="AceptarUsuario()" style="background-color: rgba(31, 233, 58, 0.658)">Aceptar</button>
-          <button ion-button (click)="RechazarUsuario()" style="background-color: rgba(233, 31, 31, 0.603)">Rechazar</button>
+          <button ion-button (click) ="AceptarUsuario(usuario)" style="background-color: rgba(31, 233, 58, 0.658)">Aceptar</button>
+          <button ion-button (click)="RechazarUsuario(usuario)" style="background-color: rgba(233, 31, 31, 0.603)">Rechazar</button>
     
       </ion-card>
 
