--- a/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
+++ b/src/pages/pages-dueno/pages-dueno-menu/pages-dueno-menu.html
@@ -5,8 +5,10 @@
 </ion-header>
 <ion-content padding class="bartenderMenu">
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="Reservas()">Reservas</button>
+  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="RegistrosUsuarios()">Registros pendientes</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="altas()">Altas</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="ChequearMesa()">Chequear Mesa con QR</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="OcuparMesa()">Ocupar Mesa con QR</button>
   <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="RelacionMesaUsuario()">Obtener Usuario de Mesa</button>
+  <solicitud-mesa></solicitud-mesa>
 </ion-content>
