Cambios: Pedido/Producto con Set. Alta de pedido con id, alta de producto con id. Boton de prueba con datos de test en Pages-pedido-alta.ts.  agregado de plugin de email composer.

--- a/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
+++ b/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
@@ -8,5 +8,8 @@
 
 
 <ion-content padding>
+  Existe dentro del ts la funcion de prueba que da de alta un nuevo pedido con este boton.
+  Chequear en consola el resultado.
+  <button ion-button [disabled]="!botonHabilitado" expand="block" class="ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="AltaPedido()">Alta Pedido - TEST</button>
 
 </ion-content>
