Cambios en registros

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -24,8 +24,12 @@
   </form>
 
   <div padding>
+    <button class="loginButton" large ion-button color="primary" block (click)="ingresoAnonimo()" >Ingreso Invitado</button>
+  </div>
+
+  <div padding>
       <button class="loginButton" large ion-button color="primary" block (click)="irARegistro()" >Registrarme</button>
-    </div>
+  </div>
 
 </ion-content>
 <ion-footer>
