--- a/src/pages/pages-registro-usuario/pages-registro-usuario.html
+++ b/src/pages/pages-registro-usuario/pages-registro-usuario.html
@@ -43,7 +43,7 @@
 
 
             <div padding>
-                <button type="submit" class="loginButton" large ion-button color="primary" [disabled]="!registroForm.valid" block>Enviar</button>
+                <button [disabled]="!botonHabilitado" type="submit" class="loginButton" large ion-button color="primary" [disabled]="!registroForm.valid" block>Enviar</button>
               </div>
      
     </ion-list>
@@ -51,7 +51,7 @@
 
   
   <div padding>
-    <button class="loginButton" large ion-button color="primary" (click)="LeerDni()">Escaner dni</button>
+    <button [disabled]="!botonHabilitado" class="loginButton" large ion-button color="primary" (click)="LeerDni()">Escaner dni</button>
   </div>
 
 </ion-content>
