--- a/src/pages/pages-mozo/pages-mozo.html
+++ b/src/pages/pages-mozo/pages-mozo.html
@@ -17,4 +17,13 @@
 
   <button ion-button full (click)="ListaEspera()">Lista de espera</button>
 
+  <ion-list>
+    <ion-item *ngFor="let mesa of listaMesas"  mesa [estado]="mesa.estado" (click)="Opciones(mesa)" >
+
+     Numero: {{mesa.numero}}
+     Estado: {{mesa.estado}}
+
+    </ion-item>
+  </ion-list>
+
 </ion-content>
