Se sube creacion de pedido completa, sin alta

--- a/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
+++ b/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar class="cocineroNavBar">
     <ion-title style="text-align: -webkit-right;">
-      <button ion-button block large (click)="miPedido($event)" style="border-radius: 20px; font-size: 15px; width: 50%;">Mi
+      <button ion-button block large (click)="miPedido()" style="border-radius: 20px; font-size: 15px; width: 50%;">Mi
         pedido</button>
     </ion-title>
   </ion-navbar>
