--- a/src/pages/pages-pedidos/pages-pedidos-lista/pages-pedidos-lista.html
+++ b/src/pages/pages-pedidos/pages-pedidos-lista/pages-pedidos-lista.html
@@ -1,7 +1,22 @@
-<ion-list>
-  <ion-list-header>Mi pedido</ion-list-header>
-  <ion-item padding *ngFor="let producto of pedido.productos">
-    <ion-col>{{producto.nombre}}</ion-col>
-    <ion-col>{{producto.cantidad}}</ion-col>
-  </ion-item>
-</ion-list>
+<ion-grid class="estilo-grid">
+  <ion-row class="ion-align-items-center ion-justify-content-center">
+    <ion-col style="text-align: center; margin:auto; background-color: darkgray;border-radius: 15px 0px 0px 0px;">
+      Producto</ion-col>
+    <ion-col style="text-align: center; margin:auto; background-color: darkgray;border-radius: 0px 15px 0px 0px;">
+      Cantidad</ion-col>
+  </ion-row>
+  <ion-row *ngFor="let producto of pedido.productos" class="ion-align-items-center ion-justify-content-center">
+    <ion-col style="text-align: center; margin:auto;">{{producto.nombre}}</ion-col>
+    <ion-col style="text-align: center; margin:auto;">{{producto.cantidad}}</ion-col>
+  </ion-row>
+  <ion-row class="ion-align-items-center ion-justify-content-center">
+    <ion-col style="text-align: center; margin:auto; background-color: darkgray;">
+      Costo</ion-col>
+    <ion-col style="text-align: center; margin:auto; background-color: darkgray;">
+      Espera</ion-col>
+  </ion-row>
+  <ion-row class="ion-align-items-center ion-justify-content-center">
+    <ion-col style="text-align: center; margin:auto;">{{costo}}$</ion-col>
+    <ion-col style="text-align: center; margin:auto;">{{duracion}} minuto/s</ion-col>
+  </ion-row>
+</ion-grid>
