Se mejora funcionalidad. Falta insertar pedido y funcionalidad de quitar producto

--- a/src/pages/pages-pedidos/pages-pedidos-lista/pages-pedidos-lista.html
+++ b/src/pages/pages-pedidos/pages-pedidos-lista/pages-pedidos-lista.html
@@ -16,7 +16,7 @@
       Espera</ion-col>
   </ion-row>
   <ion-row class="ion-align-items-center ion-justify-content-center">
-    <ion-col style="text-align: center; margin:auto;">{{costo}}$</ion-col>
-    <ion-col style="text-align: center; margin:auto;">{{duracion}} minuto/s</ion-col>
+    <ion-col style="text-align: center; margin:auto;">{{pedido.costo}}$</ion-col>
+    <ion-col style="text-align: center; margin:auto;">{{pedido.tiempo_espera}} minuto/s</ion-col>
   </ion-row>
 </ion-grid>
