--- a/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
+++ b/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
@@ -36,11 +36,18 @@
     <br>
     <ion-row class="pedidos-data">
       <ion-col>
-        <button ion-button block small (click)="mostrarDetalles(producto.nombre)" style="border-radius: 10px;">Detalles</button>
+        <button ion-button block small (click)="mostrarDetalles(producto.nombre)"
+          style="border-radius: 10px;">Detalles</button>
       </ion-col>
       <ion-col>
-        <button ion-button block small (click)="cargar(producto.nombre)" color="warning" style="border-radius: 10px; background-color: darkgreen;">Agregar</button>
+        <button ion-button block small (click)="cargar(producto.nombre)"
+          style="border-radius: 10px; background-color: darkgreen;">Agregar</button>
       </ion-col>
+    </ion-row>
+    <ion-row class="pedidos-data">
+      <!-- Agregar funcionalidad para sacar producto de la lista en caso de haberse agregado antes -->
+      <button ion-button block small (click)="cargar(producto.nombre)"
+        style="border-radius: 10px; background-color: darkred; margin: 2.5%;">Sacar</button>
     </ion-row>
     <ion-row class="pedidos-data" *ngIf="detallesProductos[producto.nombre]">
       <p style="color: black; font-size: 15px; margin: auto; padding: 5%;">{{producto.descripcion}}</p>
@@ -50,7 +57,8 @@
         <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Precio:</b><br>{{producto.precio}}$</p>
       </ion-col>
       <ion-col>
-        <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Tiempo:</b><br>{{producto.tiempo}} minuto/s</p>
+        <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Tiempo:</b><br>{{producto.tiempo}}
+          minuto/s</p>
       </ion-col>
     </ion-row>
   </ion-card>
