--- a/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
+++ b/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
@@ -1,9 +1,11 @@
 <ion-header>
-  <ion-navbar class="cocineroNavBar">
-    <ion-title style="text-align: -webkit-right;">
-      <button ion-button block large (click)="miPedido()" style="border-radius: 20px; font-size: 15px; width: 50%;">Mi
-        pedido</button>
-    </ion-title>
+  <ion-navbar class="cocineroNavBar" style="display: inline-flex;">
+    <button ion-button block (click)="pedir()"
+      style="border-radius: 20px; font-size: 15px; width: 80%; display:inline-block; background-color: darkgreen;">Pedir</button>
+    <button ion-button block (click)="miPedido()"
+      style="border-radius: 20px; font-size: 15px; width: 15%; display:inline-block;  background-color: darkorange;">
+      <ion-icon name="cart"></ion-icon>
+    </button>
   </ion-navbar>
 </ion-header>
 
@@ -40,7 +42,7 @@
           style="border-radius: 10px;">Detalles</button>
       </ion-col>
       <ion-col>
-        <button ion-button block small (click)="cargar(producto.nombre)"
+        <button ion-button block small (click)="cargar(producto.nombre, producto.tipo)"
           style="border-radius: 10px; background-color: darkgreen;">Agregar</button>
       </ion-col>
     </ion-row>
@@ -56,7 +58,8 @@
         <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Precio:</b><br>{{producto.precio}}$</p>
       </ion-col>
       <ion-col>
-        <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Tiempo:</b><br>{{producto.tiempo}} minuto/s</p>
+        <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Tiempo:</b><br>{{producto.tiempo}}
+          minuto/s</p>
       </ion-col>
     </ion-row>
   </ion-card>
