--- a/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
+++ b/src/pages/pages-pedidos/pages-pedidos-alta/pages-pedidos-alta.html
@@ -66,7 +66,7 @@
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-title> <button ion-button block small (click)="cargarConQR()"
-        style="border-radius: 10px;">Cargar con QR</button></ion-title>
+    <ion-title> <button ion-button block small (click)="cargarConQR()" style="border-radius: 10px;">Cargar con
+        QR</button></ion-title>
   </ion-toolbar>
 </ion-footer>
