--- a/src/pages/pages-cliente-anonimo/pages-cliente-anonimo-menu/pages-cliente-anonimo-menu.html
+++ b/src/pages/pages-cliente-anonimo/pages-cliente-anonimo-menu/pages-cliente-anonimo-menu.html
@@ -9,7 +9,7 @@
     <button [disabled]="!ocupaMesa" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="hacerPedido()">Hacer pedido</button>
     <solicitud-mesa [ocupaMesa]="ocupaMesa"></solicitud-mesa>
     <button [disabled]="ocupaMesa" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="OcuparMesa()">Ocupar Mesa con QR</button>
-    <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="estadoPedido()">Traer un pedido TEST</button>
+    <!-- <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="estadoPedido()">Ver Pedido</button> -->
     <!-- <listapedidos [pedidos]="pedidos"></listapedidos> -->
     <estado-pedido *ngIf="pedido" [pedido]="pedido"></estado-pedido>
   </ion-content>
