--- a/src/pages/pages-mesa/pages-mesa.html
+++ b/src/pages/pages-mesa/pages-mesa.html
@@ -15,7 +15,7 @@
 
 <ion-content padding class="cocineroMenu">
   <ion-title style="color: black">Mesa {{mesa.numero}}</ion-title>
-<p> Estado: {{mesa.estado}} Por: {{mesa.usuario.nombre}}</p>
+<p style="color: white"> Estado: {{mesa.estado}} Por: {{mesa.usuario.nombre}}</p>
   
 
     <button ion-button full (click)="TomarPedido()" > Tomar pedido </button>
@@ -25,8 +25,15 @@
   <ion-list>
     <ion-card *ngFor="let pedido of listaPedidos">
       Estado: {{pedido.estado}}
-
-      <button *ngIf="pedido.estado=='terminado'" ion-button style="background-color: rgb(18, 228, 18)" (click)="ServirProducto(pedido.id)">Servir</button>
+      <ion-list>
+        <ion-item *ngFor="let prod of pedido.productos">
+         Peoducto: {{prod.nombre}} <br>
+          Cantidad: {{prod.cantidad}} <br>
+         Estado: {{prod.estado}}
+        </ion-item>
+      </ion-list>
+      <button *ngIf="pedido.estado=='solicitado'" style="background-color: rgba(9, 255, 9, 0.767)">Aceptar</button>
+      <button *ngIf="pedido.estado=='terminado'" ion-button style="background-color: rgb(255, 239, 16)" (click)="ServirProducto(pedido.id)">Servir</button>
 
     </ion-card>
   </ion-list>
