--- a/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
+++ b/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
@@ -9,7 +9,7 @@
     <button [disabled]="!ocupaMesa" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="hacerPedido()">Hacer pedido</button>
     <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated">Pagar</button>
     <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="juegos()">Juegos</button>
-    <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="pedirDelivery()">Pedir delivery</button>
+    <button [disabled]="ocupaMesa" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="pedirDelivery()">Pedir delivery</button>
     <solicitud-mesa [ocupaMesa]="ocupaMesa"></solicitud-mesa>
     <button [disabled]="ocupaMesa" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="OcuparMesa()">Ocupar Mesa con QR</button>
     <estado-pedido *ngIf="pedido" [pedido]="pedido"></estado-pedido>
