Cambios en carga de juegos a pedido

--- a/src/pages/pages-juegos/pages-juegos-menu/pages-juegos-menu.html
+++ b/src/pages/pages-juegos/pages-juegos-menu/pages-juegos-menu.html
@@ -10,9 +10,9 @@
   <button ion-button expand="block"
     class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated"
     (click)="Ahorcado()">Bebida gratis</button>
-  <button ion-button expand="block"
+  <!-- <button ion-button expand="block"
     class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated"
-    (click)="postre()">Postre gratis</button>
+    (click)="postre()">Postre gratis</button> -->
   
   <ion-card *ngIf="juegoDescuendoMostrado" class="cardJuego">
     <ion-card-header>
@@ -43,7 +43,7 @@
 
 <!-- Sección imagen + vidas + puntos -->
 <ion-row>
-    <ion-col col-4 ><img src="/assets/imgs/ahor-{{imagen}}.png" width='80%' /></ion-col>
+    <ion-col col-4 ><img src="/assets/img/appicon.png" width='50%' /></ion-col>
     <ion-col col-8 >
         <ion-row>
             <ion-col col-3 text-center><H5><ion-icon name="heart" color="danger"></ion-icon></H5></ion-col>
