Juegos en pedidos. Se suma los descuentos de bebida y 10% a los pedidos para los usuarios registrados. Juego nuevo, Ahorcado para la gaseosa gratis.

--- a/src/pages/pages-juegos/pages-juegos-menu/pages-juegos-menu.html
+++ b/src/pages/pages-juegos/pages-juegos-menu/pages-juegos-menu.html
@@ -6,10 +6,10 @@
 <ion-content padding class="cocineroMenu">
   <button ion-button expand="block"
     class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated"
-    (click)="juegoDescuento()">10% de descuento</button>
+    (click)="juegoDescuento()">Aritmetica: Resuelve y Gana!</button>
   <button ion-button expand="block"
     class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated"
-    (click)="Ahorcado()">Bebida gratis</button>
+    (click)="Ahorcado()">Ahorcado Clasico</button>
   <!-- <button ion-button expand="block"
     class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated"
     (click)="postre()">Postre gratis</button> -->
