Cambios de estado en pedido, cambian a terminadouna vez que todos los productos de ese pedido esten terminados., Grado de satisfaccion. Filtro en cocinero y bartender para los pedidos en proceso. Definicion de estado en Clase Pedido para resto y delivery

--- a/src/pages/pages-producto/pages-producto-alta/pages-producto-alta.html
+++ b/src/pages/pages-producto/pages-producto-alta/pages-producto-alta.html
@@ -14,7 +14,7 @@
         <ion-item padding class="formItem">
           <ion-select name="tipo" [(ngModel)]="producto.tipo" placeholder="Tipo">
             <ion-option *ngIf="perfilActual === 'bartender'" value="bebida">Bebida</ion-option>
-            <ion-option *ngIf="perfilActual === 'cocinero'" value="postre">Postre</ion-option>
+            <ion-option *ngIf="perfilActual === 'cocinero'" value="comida">Postre</ion-option>
             <ion-option *ngIf="perfilActual === 'cocinero'" value="comida">Comida</ion-option>
           </ion-select>
         </ion-item>
