--- a/src/pages/pages-mozo/pages-mozo.html
+++ b/src/pages/pages-mozo/pages-mozo.html
@@ -17,6 +17,8 @@
 
   <button ion-button full (click)="ListaEspera()">Lista de espera</button>
 
+  <button ion-button full (click)="ListaEspera()">Pedidos pendientes</button>
+
   <ion-list>
     <ion-item *ngFor="let mesa of listaMesas"  mesa [estado]="mesa.estado" (click)="Opciones(mesa)" >
 
