--- a/src/pages/pages-mesa/pages-mesa.html
+++ b/src/pages/pages-mesa/pages-mesa.html
@@ -37,6 +37,7 @@
       <ion-badge *ngIf="pedido.estado=='pendiente'" style="background-color: yellow">En preparacion</ion-badge>
       <button *ngIf="pedido.estado=='solicitado'" ion-button style="background-color: rgba(9, 255, 9, 0.767)" (click)="AceptarPedido(pedido)">Aceptar</button>
       <button *ngIf="pedido.estado=='terminado'" ion-button style="background-color: rgb(255, 239, 16)" (click)="ServirPedido(pedido)">Servir</button>
+      <button *ngIf="pedido.estado=='solicita_cuenta'" ion-button style="background-color: rgb(16, 60, 255)" (click)="Cobrar(pedido)">Cobrar</button>
     </ion-card-content>
     </ion-card>
   </ion-list>
