--- a/src/pages/pages-pedidos/pages-pedidos-delivery/pages-pedidos-delivery.html
+++ b/src/pages/pages-pedidos/pages-pedidos-delivery/pages-pedidos-delivery.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar class="cocineroNavBar">
-    <ion-title style="text-align: center;">Seleccione su direccion</ion-title>
+    <ion-title style="text-align: center;">Seleccione su dirección</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding class="cocineroMenu">
@@ -18,19 +18,37 @@
   </ion-row>
   <ion-row class="pedidos-data">
     <ion-col>
-      <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Costo de
-          envío:</b><br>{{pedido.costo_envio}}$</p>
+      <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Costo total del
+          pedido:</b><br><br>{{costo_total}}$</p>
     </ion-col>
     <ion-col>
-      <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Duracion mínima:</b><br>{{duracion}}
+      <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Tiempo total del
+          pedido:</b><br><br>{{tiempo_total}} minuto/s</p>
+    </ion-col>
+  </ion-row>
+  <ion-row class="pedidos-data">
+    <ion-col>
+      <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Costo de
+          envío:</b><br><br>{{pedido.costo_envio}}$</p>
+    </ion-col>
+    <ion-col>
+      <p style="color: black; font-size: 15px; margin: auto; padding: 5%;"><b>Duracion
+          envío:</b><br><br>{{pedido.tiempo_envio}}
         minuto/s</p>
     </ion-col>
   </ion-row>
 </ion-content>
 <ion-footer>
   <ion-toolbar>
-    <ion-title> <button ion-button block small (click)="cargar()"
-        style="border-radius: 10px; height: 3.0em; background-color: darkgreen; font-size: 20px;">Cargar</button>
+    <ion-title>
+      <ion-row>
+        <ion-col><button ion-button block small (click)="cancelar()"
+            style="border-radius: 10px; height: 2.0em; background-color: darkred; font-size: 20px;">Cancelar</button>
+        </ion-col>
+        <ion-col><button ion-button block small (click)="cargar()"
+            style="border-radius: 10px; height: 2.0em; background-color: darkgreen; font-size: 20px;">Cargar</button>
+        </ion-col>
+      </ion-row>
     </ion-title>
   </ion-toolbar>
 </ion-footer>
