--- a/src/pages/pages-lista-de-espera/pages-lista-de-espera-menu/pages-lista-de-espera-menu.html
+++ b/src/pages/pages-lista-de-espera/pages-lista-de-espera-menu/pages-lista-de-espera-menu.html
@@ -4,7 +4,7 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding class="cocineroMenu">
-  <button ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="agregarse()">Agregarse</button>
+  <button *ngIf="usuario.tipo != 'mozo'" ion-button expand="block" class="menuButtonPPT ios button button-block button-solid ion-activatable ion-focusable hydrated" (click)="agregarse()">Agregarse</button>
   <br>
   <ion-list class="listaEsperaList">
     <ion-item class="listaEsperaItem" *ngFor="let registro of registros" style="background-color: transparent;">
