Se suben arreglos, template de Excel/JSON y se agregan plugins de archivos

--- a/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
+++ b/src/pages/pages-cliente/pages-cliente-menu/pages-cliente-menu.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar class="cocineroNavBar">
-    <ion-title>Cliente</ion-title>
+    <ion-title>{{usuario.nombre}}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding class="cocineroMenu">
